# lwt-parallel

./: .gitignore  .travis.yml  AUTHORS.txt  INSTALL.txt  LICENSE  README.md  README.txt  _oasis  _tags  dune-project  lwt-parallel.opam  myocamlbuild.ml  opam  setup.ml
.github/workflows/: test.yml
lib/: META  dune  lwt_parallel.mllib  parallel.ml  parallel.mli
lib_test/: dune  run_tests.ml
