opam-version: "2.0"
name: "lwt-parallel"
version: "master"
maintainer: "Ivan Gotovchits <ivg@ieee.org>"
authors: "Ivan Gotovchits <ivg@ieee.org>"
homepage: "https://github.com/ivg/parallel"
bug-reports: "https://github.com/ivg/parallel/issues"
dev-repo: "git+https://github.com/ivg/parallel.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
   "base-unix"
   "lwt"       {>= "2.7.0"}
   "dune"
   "logs"
   "fmt"
]
synopsis: "Lwt-enabled parallel computing library"
