opam-version: "2.0"
name: "lwt-parallel"
version: "master"
maintainer: "Ivan Gotovchits <ivg@ieee.org>"
authors: "Ivan Gotovchits <ivg@ieee.org>"
homepage: "https://github.com/ivg/parallel"
bug-reports: "https://github.com/ivg/parallel/issues"
dev-repo: "git+https://github.com/ivg/parallel.git"
license: "MIT"
synopsis: "Lwt-enabled parallel computing library"

build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "base-unix"
  "dune" {>= "1.6"}
  "fmt"
  "logs"
  "lwt"   {>= "2.7.0"}
  "ocaml" {>= "4.08.0"}
  "odoc" {with-doc}
]
